<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="413dp"
        android:layout_height="523dp"
        android:background="#E3C107"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/indigo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="206dp"-->
<!--        android:orientation="vertical"-->
<!--        android:background="#FAFFFFFF"-->
<!--        tools:layout_editor_absoluteX="1dp"-->
<!--        tools:layout_editor_absoluteY="524dp"-->
<!--        tools:ignore="MissingConstraints" />-->


    <ImageView
        android:id="@+id/texi"
        android:layout_width="691dp"
        android:layout_height="720dp"
        android:layout_marginTop="138dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.771"
        app:srcCompat="@drawable/taxi" />

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="60dp"
        android:background="@drawable/rectangle"
        android:text="@string/next"
        android:textSize="25sp"
        android:theme="@style/Button.White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>