<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7"
    android:background="@drawable/bg1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="708dp"
        android:layout_height="1032dp"
        android:contentDescription="@string/Loading..."
        android:src="#C1F4E244"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <ImageButton
        android:id="@+id/returnback"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:src="@drawable/returnback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        android:contentDescription="@string/Loading..." />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Driver_sighnup"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="53dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.01999998">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page7"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="italic"
            tools:ignore="MissingConstraints"
            android:padding="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="40dp"
            android:background="@drawable/rectangular"
            android:drawablePadding="8dp"
            android:hint="Email"
            android:padding="8dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/black"
            android:background="@drawable/rectangular"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:padding="8dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangular"
            android:backgroundTint="#2196F3"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:cornerRadius="20dp"/>

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/already_an_user_login"
            android:textColor="@color/black"
            android:background="@drawable/rectangular"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>